[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/MESSAGE/messagescene.gd" type="Script" id=1]
[ext_resource path="res://src/Base/AppControl.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="Messageapp" type="PanelContainer"]
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessagePanel" type="VBoxContainer" parent="."]
margin_right = 341.0
margin_bottom = 61.0

[node name="AppControl" parent="MessagePanel" instance=ExtResource( 2 )]
margin_right = 341.0
margin_bottom = 21.0

[node name="HSplitContainer" type="HSplitContainer" parent="MessagePanel"]
margin_top = 25.0
margin_right = 341.0
margin_bottom = 61.0

[node name="Namelist" type="PanelContainer" parent="MessagePanel/HSplitContainer"]
modulate = Color( 1, 0.0352941, 0.0352941, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 315.0
margin_bottom = 36.0
rect_min_size = Vector2( 315, 0 )

[node name="Namecontainer" type="VBoxContainer" parent="MessagePanel/HSplitContainer/Namelist"]
margin_left = 7.0
margin_top = 7.0
margin_right = 308.0
margin_bottom = 29.0

[node name="PersonalChat" type="PanelContainer" parent="MessagePanel/HSplitContainer"]
modulate = Color( 0.647059, 1, 0.403922, 1 )
self_modulate = Color( 0.792157, 1, 0.741176, 1 )
margin_left = 327.0
margin_right = 341.0
margin_bottom = 36.0

[node name="CHAT" type="VBoxContainer" parent="MessagePanel/HSplitContainer/PersonalChat"]
modulate = Color( 0, 1, 1, 1 )
self_modulate = Color( 0.513726, 1, 0.964706, 1 )
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 29.0

[node name="NAME" type="Label" parent="MessagePanel/HSplitContainer/PersonalChat/CHAT"]
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messagelog" type="VBoxContainer" parent="MessagePanel/HSplitContainer/PersonalChat/CHAT"]
margin_top = 18.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choose" type="VBoxContainer" parent="MessagePanel/HSplitContainer/PersonalChat/CHAT"]
modulate = Color( 0.662745, 0.92549, 0.968627, 1 )
self_modulate = Color( 0.666667, 0.960784, 1, 1 )
margin_top = 22.0
margin_bottom = 22.0
